--- a/doc/DokumenSkripsi/Bab/bab4.tex
+++ b/doc/DokumenSkripsi/Bab/bab4.tex
@@ -1,6 +1,8 @@
 \chapter{Perancangan}
 \label{chap:perancangan}
 
+Pada bab ini akan dijelaskan mengenai perancangan aplikasi yang akan dibangun meliputi diagram kelas rinci beserta deskripsi dan fungsinya, dan perancangan antarmuka.
+
 \section{Diagram Kelas Rinci} 
 \label{sec:diagram_kelas_rinci}
 Diagram kelas rinci diperoleh dari hasil pengembangan diagram kelas analisis pada subbab \ref{sec:analisis_kelas}. Diagram kelas rinci dapat dilihat pada Gambar \ref{fig:4_final_class_diagram}. 
