--- a/doc/DokumenSkripsi/Bab/bab5.tex
+++ b/doc/DokumenSkripsi/Bab/bab5.tex
@@ -1,6 +1,8 @@
 \chapter{Implementasi dan Pengujian}
 \label{chap:implementasiPengujian}
 
+Bab ini terdiri atas dua bagian, yaitu Implementasi Perangkat Lunak dan Pengujian Perangkat Lunak. Bagian implementasi berisi penjelasan lingkungan pengembangan perangkat lunak dan hasil implementasi. Sedangkan bagian pengujian berisi hasil pengujian fungsional dan eksperimental terhadap perangkat lunak yang telah dibangun.
+
 \section{Implementasi}
 \label{sec:implementasi}
 
@@ -22,7 +24,7 @@
 				\end{enumerate}
 
 \subsection{Hasil Implementasi}
-				Hasil implementasi berupa aplikasi berbasis web responsif yang menggunakan \textit{framework} Bootstrap\footnote{\url{http://getbootstrap.com/}, diakses 20 November 2015}. Aplikasi dapat diakses pada jaringan FTIS dengan URL \url{http://studentportal-if.ftis.unpar:9000}. Aplikasi Informatika Student Portal terdiri dari lima halaman antara lain:
+				Hasil implementasi berupa aplikasi berbasis web yang menggunakan \textit{framework} Bootstrap\footnote{\url{http://getbootstrap.com/}, diakses 20 November 2015}. Aplikasi dapat diakses pada jaringan FTIS dengan URL \url{http://studentportal-if.ftis.unpar:9000}. Aplikasi Informatika Student Portal terdiri dari lima halaman antara lain:
 			\begin{enumerate}	 
 				\item\textbf{Halaman \textit{Login}}\\
 				Halaman \textit{login} digunakan pengguna untuk masuk ke dalam aplikasi. Pada halaman ini, pengguna dapat melakukan \textit{login} dengan mengisi \textit{email} pada kolom \textit{email} dan \textit{password} pada kolom \textit{password} kemudian mengklik tombol login. Tangkapan layar dari halaman \textit{login} dapat dilihat pada Gambar \ref{fig:5_hasil_login}.
@@ -79,7 +81,7 @@
 				
 \section{Pengujian}
 			\subsection{Pengujian Fungsional} 
-			Pengujian fungsional dilakukan untuk mengetahui kesesuaian reaksi perangkat lunak dengan reaksi yang diharapkan berdasarkan aksi pengguna terhadap perangkat lunak. Pengujian ini dilakukan pada berbagai sistem yaitu Windows, Linux, MacOS, dan Android. Terdapat tujuh tes kasus yang diujikan, detail serta hasilnya dapat dilihat di tabel \ref{table:hasilFungsional}.
+			Pengujian fungsional dilakukan untuk mengetahui kesesuaian reaksi perangkat lunak dengan reaksi yang diharapkan berdasarkan aksi pengguna terhadap perangkat lunak. Pengujian ini dilakukan pada berbagai sistem yaitu Windows, Linux, MacOS, dan Android dengan hasil yang sama. Terdapat tujuh tes kasus yang diujikan, detail serta hasilnya dapat dilihat pada Tabel \ref{table:hasilFungsional}.
 			
 			\begin{table}[H]
 			\centering
@@ -104,7 +106,7 @@
 			\end{table}
 			
 		\subsection{Pengujian Eksperimental} 
-		Pengujian eksperimental dilakukan terhadap mahasiswa angkatan 2012 sampai 2015. Dari setiap angkatan, diambil 3 orang untuk melakukan pengujian. Setiap responden diminta untuk melakukan \textit{login} kemudian melihat data dari setiap halaman pada Portal Akademik Mahasiswa dan memastikan apakah data tersebut sudah sesuai dengan data sebenarnya. Responden menolak jika hasil pegujian diperlihatkan dengan alasan privasi, karena itu hasil pengujian dirangkum sebagai berikut:
+		Pengujian eksperimental dilakukan terhadap mahasiswa angkatan 2012 sampai 2015. Dari setiap angkatan, diambil tiga orang untuk melakukan pengujian. Setiap responden diminta untuk melakukan \textit{login} kemudian melihat data dari setiap halaman pada Portal Akademik Mahasiswa dan memastikan apakah data tersebut sudah sesuai dengan data sebenarnya. Responden menolak jika hasil pegujian diperlihatkan dengan alasan privasi, karena itu hasil pengujian dirangkum sebagai berikut:
 		\begin{itemize}
 			\item Angkatan 2012\\
 			Saat melakukan pemeriksaan prasyarat, terdapat mahasiswa dengan status belum lulus mata kuliah ``AIF101 Pemrograman Berorientasi Objek''. Hal ini disebabkan oleh perubahan kurikulum pada tahun 2013. Kode mata kuliah Pemrograman Berorientasi Objek yang sudah ditempuh angkatan 2012 adalah AIF 191. ``AIF191 Pemrograman Berorientasi Objek'' merupakan hasil konversi mata kuliah ``AKS141 Dasar-dasar Pemrograman''\footnote{\url{http://tinyurl.com/lionov}<Kurikulum 2013><ATURAN KONVERSI 
