--- a/doc/DokumenSkripsi/Bab/bab6.tex
+++ b/doc/DokumenSkripsi/Bab/bab6.tex
@@ -6,7 +6,7 @@
 Dari hasil pembangunan aplikasi Informatika Student Portal, didapatkanlah kesimpulan-kesimpulan sebagai berikut:
 		\begin{enumerate}
 			\item Fitur-fitur yang dibuat untuk Informatika Student Portal antara lain prasyarat mata kuliah, jadwal kuliah yang tersusun dan terurut berdasarkan hari, data akademik berupa IPS dan IPK yang langsung berubah ketika nilai sudah muncul, sisa SKS, dan status kelulusan mata kuliah pilihan wajib, dan aplikasi yang dapat diakses dari sistem operasi manapun.
-			\item Telah berhasil mengimplementasikan \textit{web scraping} menggunakan \textit{library} jsoup. Dengan \textit{library} jsoup, data dari Portal Akademik Mahasiswa dapat diperoleh secara langsung.
+			\item Telah berhasil mengimplementasikan ekstraksi data situs web menggunakan \textit{library} jsoup. Dengan \textit{library} jsoup, data dari Portal Akademik Mahasiswa dapat diperoleh secara langsung.
 			\item Aplikasi Informatika Student Portal telah berhasil dibangun dengan menggunakan Play Framework. Selain itu, aplikasi Informatika Student Portal juga memperoleh data dari Portal Akademik Mahasiswa secara langsung menggunakan \textit{library} jsoup kemudian mengolah data tersebut dengan bantuan SIA Models. 
 		\end{enumerate}
 
